TestCases/Errors/threaded_movement/observations/spr_09_obs.spm
 obs   3-12   0.0206666666666667 
 obs   4-12   0.00148148148148148 
 obs   5-12   0.00285714285714286 
 obs   3-13   0.0168 
 obs   4-13   0.00148148148148148 
 obs   5-13   0.00259259259259259 
 obs   5-15   0.00222222222222222 
 obs   6-15   0.00444444444444444 
 obs   6-16   0.0272222222222222 
 obs   7-16   0.00921031746031746 
 obs   7-17   0.0112161172161172 
 error_value   3-12   0 
 error_value   4-12   0 
 error_value   5-12   0 
 error_value   3-13   0 
 error_value   4-13   0 
 error_value   5-13   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-16   0 
 error_value   7-17   0 
